# aligner-testbed

./: .gitignore  README.md  meson.build
data/: clr1.txt
src/: main.cpp
subprojects/: miniwfa.wrap  wfa.wrap
